--- a/index.html
+++ b/index.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./asset/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>To-Do List</title>
 </head>
+
 <body>
     <div id="root">
-        
+        <h1 class="text-center">To-Do List</h1>
+        <div class="d-flex justify-content-center align-items-center my-3 container">
+            <input type="text" class="me-4 form-control" placeholder="Aggiungi task">
+            <button type="button" class="btn btn-dark" @click="">Aggiungi</button>
+        </div>
+
+        <div class="container">
+            <!-- <h2 class="text-center">Non ci sono task da svolgere</h2> -->
+            <div class="w-50 mx-auto">
+                <ul>
+                    <li class="d-flex justify-content-between align-items-center p-2"
+                    v-for="(task, index) in tasks"
+                    :key="index">
+                        <p>{{ task.text }}</p>
+                        <i class="fa-solid fa-circle-xmark text-danger"
+                        role="button"
+                        @click="removeTask(index)"></i>
+                    </li>
+                </ul>
+            </div>
+
+
+        </div>
+
+
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="./asset/js/main.js"></script>
 </body>
+
 </html>
